welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:2: error: not found: value jawa
var T = new Array[jawa.awt.Color](getMondeHauteur())
                  ^