welcome.lessons.welcome.array.basics.Array2.scala.code
var T = new Array[jawa.awt.Color](getMondeHauteur())

def brosse(c:Color)
	{
		setCouleurBrosse(c); baisseBrosse(); leveBrosse()
	}

def colonne(decalage:Int)
{
	brosse(T(decalage%T.lenght))
	for(i <- 1 to T.lenght-1)
	{	
		avance()
		brosse(T((i-1+decalage)%T.lenght))
	}
	for(i <- 1 to T.lenght-1)
	{
		recule()
	}
}

override def run() 
{
	
	var bouge: Color = null
	var decalage = 0

	T(0) = getCouleurSol()		//Prend les couleurs
	for(i <- 1 to T.length-1)
	{
		avance()
		T(i) = getCouleurSol()	
	}
	for(i <- 1 to T.length-1)
	{
		recule()
	}			// Revient apres avoir pris les couleurs

	for(i <- 1 to T.length-1)
	{
		gauche(); avance(); droite()
		decalage = litMessage().toInt
		colonne(decalage)
	}
}

